- `clock.ClockDisplay`. Use `window.FPSDisplay` instead.
- `clock.test_clock`. This relied on deprecated behavior, and is superseded by unit tests.
- `font.text`. Use the `text` module instead for displaying text.
- `window.Platform` API. Use `canvas.get_display` or `canvas.Display` instead.
- `font.Win32Font` class. This has been replaced by `font.GDIPlusFont`, which was already default.

note: The canvas and display logic seems a bit disjointed. Should be reviewed.
note: The `font.Win32Font` class can be removed, and it's methods merged with `font.GDIPlusFont`.



Pyglet 1.3.0
============
This major release takes Python 3 support to the next level. The entire codebase is now compatible
with both Python 2 and Python 3 without the need for 2to3. This should make it easier to develop
pyglet and pyglet apps for both Python versions.

The rest of this release is focussed on code quality and test coverage. There are no API breaking
changes, and only a few minor additions. Dozens of bugs have been fixed, and the codebase is in a
better state for future improvement and maintainability.

New features
------------
- The procedural audio module is now more usable. This module allows synthesis of basic
  waveforms, such as sine, square, triangle, sawtooth, and simple FM (two operator sine).
  In addition, several basic amplitude envelopes are now available to apply to generated audio.
  These include ADSR, linear decay, tremolo, and flat envelopes.

Improvements
------------
- Improved font rendering for fonts with negative bearing (#99)
- Sprites now have `scale_x` and `scale_y` attributes, allowing for aspect ratio changes. The 
  existing `scale` attribute sets the overall scaling, and functions as before.
- Sprites have a new `update` method which allows simultaneous changing of position, scale, and
  rotation. This reduces some overhead when changing multiple attributes at once.